# beads

./: .gitignore  test_output.txt  test_output_2.txt
.beads/: issues.jsonl
.github/workflows/: ci.yml
cmd/bd/: doctor_test.go
rust/: .gitignore  Cargo.toml  PORTING_GUIDE.md  PORT_STATUS_REPORT.md  README.md
rust/beads-cli/: Cargo.toml
rust/beads-cli/src/: main.rs
rust/beads-cli/tests/: cli_tests.rs
rust/beads-core/: Cargo.toml
rust/beads-core/js/: beads_git.js
rust/beads-core/src/: fs.rs  git.rs  lib.rs  memory_store.rs  merge.rs  models.rs  store.rs  sync.rs  util.rs  wasm.rs
rust/beads-core/tests/: export_test.rs  git_test.rs  memory_store_test.rs  store_test.rs
rust/docs/: architecture.md  cli_usage.md  compatibility.md  development.md  wasm_compatibility.md
rust/wasm-test/: README.md  index.html  main.js
scripts/: verify_compat.sh
verify_labels/.beads/: issues.jsonl
