[package]
name = "beads-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bd"
path = "src/main.rs"

[dependencies]
beads-core = { path = "../beads-core" }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.23.0"
edit = "0.1.5"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
