[package]
name = "beads-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1.43"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.32", features = ["bundled", "functions"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
tempfile = "3.2"
